[project]
name = "spotify-random-saved-album"
description = "Get an URL to a random saved Spotify album."
readme = "README.rst"
requires-python = ">=3.10"
license = {file = "LICENCE"}
authors = [{ name="Matej Ciglenečki"}]
dependencies = [
    "spotipy",
    "python-dotenv",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/ciglenecki/spotify-random-saved-album"

[project.scripts]
spotify-random-saved-album = "spotify_random_saved_album.spotify_random_saved_album:main"

[tool.setuptools]
include-package-data = true
package-data = {"spotify_random_saved_album.resources" = [".env", ".cache", ".cache.json"]}

[tool.setuptools.packages.find]
namespaces = true


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"