[project]
name = "spotify-random-saved-album"
description = "Get an URL to a random saved Spotify album."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENCE" }
authors = [{ name = "Matej CigleneÄki" }]
dependencies = ["spotipy"]
version = "0.0.5"

[project.urls]
"Homepage" = "https://github.com/ciglenecki/spotify-random-saved-album"

[project.scripts]
spotify-random-saved-album = "spotify_random_saved_album.spotify_random_saved_album:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
